--- a/metadata.yaml
+++ b/metadata.yaml
@@ -44,5 +44,6 @@ subjects:
 - !lcsh 'Love stories'
 - !lcc 'PR'
 - !lcsh 'College students -- Fiction'
+- GITenberg
 title: A College Girl
 url: http://www.gutenberg.org/ebooks/21110
